2004-01-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnrtype/nr-rasterfont.cpp
	(nr_rasterfont_generic_glyph_area_get,
	nr_rasterfont_generic_glyph_mask_render): Suppress warning:
	s/CLAMP/MIN/ if the type is unsigned and the lower bound is 0.

	* src/helper/sp-canvas.cpp (paint): Cache canvas->{x0,y0} +
	GTK_WIDGET(canvas)->allocation.{width,height}.
	Remove some commented-out variables.

	* src/tools-switch.cpp, src/tools-switch.h: Make some functions static.
	(tools_num2name): Remove unused function.
	(tools_isactive): Add assertion of not accessing past the end of the
	array.

	* src/knot.cpp (sp_knot_handler): Fix bug where event wasn't
	getting consumed.
	Get rid of hypot macro.

	* src/svg/svg-affine.cpp (sp_svg_transform_write): Add assertions
	that buffer overflow hasn't occurred.

	* src/sp-text.cpp (sp_text_font_style_to_lookup),
	src/dialogs/text-edit.cpp (sp_text_edit_dialog_font_style_to_lookup):
	Slight restructuring using g_snprintf instead of less readable (&
	slightly less efficient in this case) strlen/memcpy.

	* src/sp-metrics.h: Increase precision of PT_PER_CM etc.
	Add FIXME comment.

	* src/dialogs/item-properties.cpp, src/display/nr-arena-shape.cpp:
	Address `-Wshadow' warnings.

	* src/nodepath.h, src/nodepath.cpp: Make some functions static.
	(sp_nodepath_node_deselect) Remove unused function.

	* src/dialogs/align.cpp (sp_quick_align_dialog): Switch to data-driven approach.
	Mark some things as static.
	(sp_quick_align_dialog_close) Remove unused function.
	(sp_align_arrange_clicked) Change aligns constant array from ints to
	doubles.  Adjust caller.

2004-01-11  Iain <iain@prettypeople.org>

	* src/modules/ps.cpp: Swap the Print and Cancel buttons around, and
	remove the separator.

2004-01-11  bulia byak <bulia@users.sourceforge.net>

	* src/desktop.cpp,h: New functions and SPDesktop members for maintaining lists of past
	and future zooms. New commands for toggling rulers and scrollbars, removed old and